# ChangeLog for dev-java/jruby
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jan 2012; Hans de Graaff <graaff@gentoo.org> jruby-1.6.5.1.ebuild:
  yecht.jar is no longer a separate jar so it must be included:
  https://github.com/jruby/jruby/commit/6c1d41aedfde705c969abf10cf5384e2be69

*jruby-1.6.5.1 (08 Jan 2012)

  08 Jan 2012; Hans de Graaff <graaff@gentoo.org> jruby-1.6.4.ebuild,
  +jruby-1.6.5.1.ebuild:
  Add jruby 1.6.5.1 work-in-progress ebuild for testing.

  26 Dec 2011; Hans de Graaff <graaff@gentoo.org> jruby-1.6.4.ebuild:
  This is an experimental version, mark it testing.

  27 Sep 2011; Hans de Graaff <graaff@gentoo.org> jruby-1.6.4.ebuild:
  Drop old pkg_postinst instrcutions for upgrading from pre 1.4 jruby versions.

  27 Sep 2011; Hans de Graaff <graaff@gentoo.org> jruby-1.6.4.ebuild:
  yecht will stay bundled for now.
