@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 1.5.1/build.xml.patch 916 RMD160 813663ea2f391ed36df4c185e7b8ad8726f35890 SHA1 72f0bdd4ee48f8abb602bcda6b05a1a34b288f2e SHA256 761a8835a43511f5c62fff5f3afa4ab05abf17d2c25348c91088ff6eb17f5d2e
 AUX 1.5.1/testfixes.patch 2490 RMD160 5cd23b036543075e718a7fdc3214e36d21cf6e90 SHA1 261879b1f7bdaaba2b8426ebf403883611906864 SHA256 457ad13912dc8131ddbf60c9afc7227e38e77fb2c389f3c3dde3cc7162dd6148
 AUX 10jruby 22 RMD160 ac56025539a2bbb7a1506a2df958c73cc1c3aba9 SHA1 caf6b109c0a7cfa53a1e470ba0ca5f27a6578723 SHA256 fb1240cfedd315ba3772830abbc238eb3061088fcf70eb4df7e9a99d92f124e4
@@ -5,11 +8,18 @@ AUX ftype-test-fixes.patch 2738 RMD160 9de8f9e14469967b736fbcf48c28a2ee9c366d6e 
 AUX gentoo.rb 257 RMD160 3dd119c675829a9196e374f0c290ceac37ddc7c6 SHA1 de86d6471533efb97bbfe24ecb4847610bc1ea42 SHA256 6868b148829f218ff4c739af05e81b1d9da5d295507d99cb1f074ed88d72a1dc
 AUX jruby 97 RMD160 500ca93e1a23897fb3d9ebd0b1a6ba7caec9be1d SHA1 ae79a6d60a9e28034fb08b394cba443fd66ceacf SHA256 579b36ea120de4fc04e384937ecc567a090bb64f276b07cc059d072a5a7d2e60
 AUX jruby-1.6.0-system-jars.patch 6042 RMD160 2ef92b2d002302edbd3e8327bff9edd4bd9f6ba3 SHA1 b16d462f91ab3f1818579d178fa8887cff5b6f13 SHA256 5a00754c704ed1a140fdb79ecf47f5d67cc792f73decdf53adc1ae197997a7cc
-AUX jruby-bash-launcher.patch 5437 RMD160 098c85b15765057f8178d7d39071c00bf284b94e SHA1 001297ea1a990ab3b987bd200af2845c31b577c7 SHA256 5545348ab7b05608b720d10de19b9ad4af79516c0e5df299f673bf7de0d67fc9
+AUX jruby-bash-launcher.patch 5505 RMD160 b6cf97294339d2b3319434576e01482d7d6d9c4a SHA1 53c60e443bd4b539e8123946785468df8b983b02 SHA256 e0997049a7bb829c06178cbbab4c5281ec9dac2e1ee8f018613cf9ddc35aea3e
 AUX user-test-fixes.patch 5147 RMD160 6258879413ae81a18d0c6bcaa3b0661d86a0d14a SHA1 32d3f80db383cf664c9ad1f9e52c2688ae3cbe5c SHA256 f21469d41de9f9b5fb1682596f64899a71c92332db24bf27e8c50dbb1896a92e
 DIST jruby-src-1.6.4.tar.gz 13939963 RMD160 db720537b22e1f7e4b31db8c325ecb051150c398 SHA1 733f55a64e2eb8131ddd31a724918b785eb04d36 SHA256 7a19afe6610aba02cb33419e089d6121a4a4dbc182db7b7043e8f2413be0250b
 DIST jruby-src-1.6.5.1.tar.gz 14284770 RMD160 a96de6c66055cbcebf48109c972d46f7d22a67c2 SHA1 8e1f6fbf609ed98ad848d3636aac1bcdcb63e3ff SHA256 1126f29b888b5427c2d416042a6c010849ab1d29ee9be97e592caf6859921be5
 EBUILD jruby-1.6.4.ebuild 5712 RMD160 0a1eb1e9061300c9f73df454517067c45a08b2f4 SHA1 9302cae45f75cab38048065e7cc1ef58a3db45e0 SHA256 03eb41818b82f4b508ddbdba40f0b0a4fa65d3e1fd677c6dd2e5586851f486b9
-EBUILD jruby-1.6.5.1.ebuild 6291 RMD160 9a2d93dbe50ad164f86e613c8cfaedbefdead470 SHA1 bd35c37804273e125f91a4f508a030b243b1527c SHA256 db08d58db481db57b790187abcbc4ab366f212eeab38629f426d1cab174fe61f
-MISC ChangeLog 892 RMD160 17091584e681992f2ccb8c6108d6e419a4ed928e SHA1 f3e42f3bcbc889a1d5d8a874132c8b82c7d788b8 SHA256 2a6007fbe07328c62a6ed9c2e5c3358111435e0875639e3898347094e1f58f90
+EBUILD jruby-1.6.5.1.ebuild 6164 RMD160 51ca5c41f6177f79ac2121b487ed87538f7aa547 SHA1 1b7a1d927d283c3260e2a104c5aced4071041d72 SHA256 a7330cf2e13bc08b0544fa5127b34cde72a61d692aff3fe118c3a67975adb549
+MISC ChangeLog 1089 RMD160 770b0c74930e0d254118b7293ba6fd55070fc249 SHA1 5e9cf005bc9f2514b1e498c5239573fffd666dfb SHA256 1e8d9ecd2c1597a4fdbec2e10c8081d383a277c0bdbe5e331800006348ca0adb
 MISC metadata.xml 179 RMD160 3813d8d3651faaf99042cb3c776d0bc59ad7b5b4 SHA1 421371d5338c6b9b8b4950c44d78a9dbe79cf64d SHA256 0df27adc265ef6596f973641d25b64b7291c87f1b114d6895f69d222049bed1b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk8dySYACgkQiIP6VqMIqNc+AQEAkp2HaJsNLwwMn/H0+jpzZwSl
+q7Y7cEY77YvjD5gQJ/sA+wUcL1yq+SuEq9aFnZAU+vlxZ3FmtThFsxN9U5eCpFv0
+=a42R
+-----END PGP SIGNATURE-----
