@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Jan 2012; Hans de Graaff <graaff@gentoo.org> jruby-1.6.5.1.ebuild,
+  files/jruby-bash-launcher.patch:
+  The properties file is no longer used. Add the bindir option to the wrapper
+  instead.
+
   22 Jan 2012; Hans de Graaff <graaff@gentoo.org> jruby-1.6.5.1.ebuild:
   yecht.jar is no longer a separate jar so it must be included:
   https://github.com/jruby/jruby/commit/6c1d41aedfde705c969abf10cf5384e2be69
